--- a/style.css
+++ b/style.css
@@ -113,6 +113,10 @@ h1 {
     margin-right: 30px;
 }
 
+.required-questions {
+    margin-top: 10px;
+}
+
 footer {
     text-align: center;
     border-top: dotted 1px;
