--- a/style.css
+++ b/style.css
@@ -117,6 +117,19 @@ h1 {
     margin-top: 10px;
 }
 
+#game-container iframe {
+    height: 450px;
+    aspect-ratio: 16/9;
+    width: auto;
+}
+
+#game-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
 footer {
     text-align: center;
     border-top: dotted 1px;
