--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
     padding-top: 0px;
     position: fixed;
     right: 10px;
-    background-color: rgba(202, 120, 32, 0.057);
+    background-color: rgb(236, 199, 159);
     border-radius: 5px;
 }
 
@@ -115,6 +115,17 @@ h1 {
 
 .required-questions {
     margin-top: 10px;
+}
+
+.result-output {
+    font-weight: bold;
+}
+
+.section-separation {
+    border-top: dotted 1.5px;
+    width: 95%;
+    margin: 0 auto;
+    
 }
 
 #game-container iframe {
